--- a/style.css
+++ b/style.css
@@ -15,7 +15,22 @@ body{
 html{
     scroll-behavior: smooth;
 }
+video {
+    display: block;
+    width: 100%;
+}
 
+video:hover::-webkit-media-controls {
+    display: none !important;
+}
+
+video:hover::-webkit-media-controls-enclosure {
+    display: none !important;
+}
+
+video:hover::-webkit-media-controls-panel {
+    display: none !important;
+}
 nav{
     position: fixed;
     top: 0;
@@ -223,7 +238,7 @@ nav{
 
 .gif{
     width: 45%;
-    height: 350px;
+
     background: #ffffff3e;
     border-radius: 5px;
 }
@@ -276,8 +291,8 @@ nav{
     flex-wrap: wrap;
 }
 .video-card{
-    width: 33.3%;
-    height: 250px;
+    width: 50%;
+    height: 350px;
     padding: 15px;
 }
 iframe{
